# gshac

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
src/gshac/: __init__.py  _gshac.c  dendro.py  sparse_hclust.py  spatial_dist_graph.py
tests/: conftest.py  test_dendro.py  test_sparse_hclust.py  test_spatial_dist_graph.py
