[build-system]
requires = ["setuptools>=42", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "gshac"
version = "0.1.0"
description = "Sparse Geographic Hierarchical Agglomerative Clustering"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "fastcluster",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.7",
]
geo = [
    "geopandas>=0.14",
    "pyproj>=3.6",
]
benchmark = [
    "gshac[plot,geo]",
    "libpysal>=4.9",
    "spopt>=0.6",
    "hdbscan",
]
dev = [
    "gshac[plot,benchmark]",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
